Updated nav bar and added resume.html.

--- a/portfolio.html
+++ b/portfolio.html
@@ -24,9 +24,10 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav ml-auto">
-            <a class="nav-link" href="./contact.html">Contact</a>
-            <a class="nav-link active" href="./portfolio.html">Portfolio<span class="sr-only">(current)</span></a>
             <a class="nav-link" href="./index.html">About</a>
+            <a class="nav-link" href="./resume.html">Resume</a>
+            <a class="nav-link active" href="./portfolio.html">Portfolio<span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="./contact.html">Contact</a>
           </div>
         </div>
       </nav>
