--- a/contact.html
+++ b/contact.html
@@ -23,9 +23,10 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav ml-auto">
-        <a class="nav-link active" href="./contact.html">Contact<span class="sr-only">(current)</span></a>
-        <a class="nav-link" href="./portfolio.html">Portfolio</a>
         <a class="nav-link" href="./index.html">About</a>
+        <a class="nav-link" href="./resume.html">Resume</a>
+        <a class="nav-link" href="./portfolio.html">Portfolio</a>
+        <a class="nav-link active" href="./contact.html">Contact<span class="sr-only">(current)</span></a>        
       </div>
     </div>
   </nav>
