--- a/resume.html
+++ b/resume.html
@@ -21,8 +21,8 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav ml-auto">
-            <a class="nav-link active" href="./index.html">About<span class="sr-only">(current)</span></a>
-            <a class="nav-link" href="./resume.html">Resume</a>
+            <a class="nav-link" href="./index.html">About</a>
+            <a class="nav-link active" href="./resume.html">Resume<span class="sr-only">(current)</span></a>
             <a class="nav-link" href="./portfolio.html">Portfolio</a>
             <a class="nav-link" href="./contact.html">Contact</a>
           </div>
