--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <!--Navbar Bootstrap-->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" id="nameNick" href="#">Nick Lynn Johnson</a>
+        <a class="navbar-brand" id="nameNick" href="#">Nick Johnson: Product Manager</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -49,7 +49,7 @@
                       <li>Python, Java, C#</li>
                       <li>Amazon Web Services</li>
                     </ul>    
-                    <p>Additionally, while I seek to acquire the skills of a developer, my main goal is to become a better Product Manager. I hope to use my compter science training to be able to communicate better with developers and also estimate the time and resources needed to complete a project. Speaking of projects, I am also working on my Project Manager Professional (PMP) certification and hope to incorporate this into my skill set. When I am able, I would like to learn more about data visualization tools like Tableau and take courses in market research and product development. My plan is to start in an entry level position as a developer or Scrum Product Owner and then progressively advance into higher roles.</p>
+                    <p>Additionally, while I seek to acquire the skills of a developer, my main goal is to become a better Product Manager. I hope to use my compter science training to be able to communicate better with developers and also estimate the time and resources needed to complete a project.</p>
                     <p>Thank you for visiting my website!</p>
                 </main>
             </div>
