--- a/resume.html
+++ b/resume.html
@@ -30,8 +30,23 @@
       </nav>
     
     <!--Main Resume Link-->
-        
-    <iframe src="https://docs.google.com/gview?url= YOUR LINK HERE &embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe>
+    <div class="container">
+      <div class="row">
+          <div class="col-lg-12">
+              <main>
+                  <h1>Resume</h1>
+                  <p>(Downloadable Link at Bottom of Page.)</p>
+                  <hr/>
+                  <div class="card" style="width: 100%;">
+                    <img src="./Develop/Assets/Images/screenshot-resume.png" class="card-img-top" alt="Picture of a Nick Johnson Resume">
+                    <div class="card-body">
+                      <a href="./Develop/Assets/Docs/Resume/Nick-Johnson-Product-Manager.pdf" class="card-link">Nick-Johnson-Product-Manager.pdf</a>
+                    </div>
+                  </div>  
+              </main>
+          </div>
+      </div>
+  </div>   
 
     <!--Sticky Footer-->
 
