Including ReadMe file.

--- a/portfolio.html
+++ b/portfolio.html
@@ -55,6 +55,23 @@
                     </div>
 
                     <div class="card" style="width: 100%;">
+                      <img src="./Develop/Assets/Images/password-screenshot.png" class="card-img-top" alt="Picture of a Password Generator Application">
+                      <div class="card-body">
+                        <h5 class="card-title">Password Generator</h5>
+                        <p class="card-text">A simple random password generator that prompts the user for criteria inputs and then generates the password accordingly.</p>
+                      </div>
+                      <ul class="list-group list-group-flush">
+                        <li class="list-group-item">HTML</li>
+                        <li class="list-group-item">CSS</li>
+                        <li class="list-group-item">Javascript</li>
+                      </ul>
+                      <div class="card-body">
+                        <a href="https://github.com/NickLynnJohnson/Password-Generator" class="card-link">Github Repository</a>
+                        <a href="https://nicklynnjohnson.github.io/Password-Generator/" class="card-link">Deployed Application</a>
+                      </div>
+                    </div>
+
+                    <div class="card" style="width: 100%;">
                       <img src="./Develop/Assets/Images/group-project-1.png" class="card-img-top" alt="Picture of Bookstore Search Application">
                       <div class="card-body">
                         <h5 class="card-title">Dharma Center Bookstore Search and Suggestion Application</h5>
